--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <label for="total"> Total : </label>
         <span id="total"></span>
     </div>
+    <p> Code by : Sidharth</p>
 </body>
 <script src="index.js"></script>
 
